2012-09-07  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-sdl.c (avt_push_key, avt_analyze_key)
	(avt_clear_keys, avt_wait_key): new functions
	(avt_analyze_event, avt_key, avt_reset): adapted
	(avt_choice, avt_decide, avt_pager): adapted

	* avatar-sdl.c (avt_start, avt_quit): load base button globally

2012-09-01  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-sdl.c (avt): bundle most settings in one structure

2012-08-29  Andreas K. Foerster  <info@akfoerster.de>

	* filechooser.c (get_directory): improved memory mangagement
	don't use scandir anymore

------------------------------------------------------------------------

2012-08-28  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.22.1 released

2012-08-13  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, audio-common.c (avt_prepare_raw_audio):
	renamed from avt_prepare_raw_audio_data

	* pascal/akfavatar.pas: do not move the avatar in automatically

2012-08-07  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar-sdl.c (AVT_FOOTER, AVT_HEADER):
	new modes replace AVT_SEPARATE

	* akfavatar.h, avatar-sdl.c (avt_avatar_mode):
	replaces avt_balloon_mode

2012-08-06  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar/person.lua: method thinks

2012-08-04  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c (lavt_entry_type):
	never raise an error and don't accept an empty string

	* lua/akfavatar-graphic.c: accept numbers as color

2012-08-03  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c (lavt_search):
	never raise an error and don't accept an empty string

	* lua/lua-avt.c (lavt_load_audio_file, lavt_load_audio):
	if first option is nil ignore second option
	(works better with avt.search)

2012-08-02  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar-sdl.c (avt_set_bitmap_color):
	new function

	* lua/lua-avt.c (lavt_set_bitmap_color): new function

	* akfavatar.h, avatar-sdl.c (avt_reset): new function